--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://whoislenn.github.io/kachelthemen",
+  "homepage": "https://whoislenn.github.io",
   "name": "kachelthemen",
   "version": "0.1.0",
   "private": true,
